# quick-snark-bench

./: .gitmodules  README.md
bellman_host/: Cargo.toml
bellman_host/src/: main.rs
bellman_wasm/: .gitignore  Cargo.toml  index.js  package-lock.json  webpack.config.js
bellman_wasm/src/: lib.rs
circom_wasm/: circuit.circom  index.html  input.json  public.json
libsnark_host/src/: CMakeLists.txt  test.cpp
