[package]
name = "bellman-perf-test"
version = "0.1.0"
authors = ["0Kims"]
edition = "2018"

[dependencies]
num-traits = "0.2.6"
num-bigint = "0.2.2"
rand = "0.4.0"
log = "0.4.6"
byteorder = "1.3.1"
bellman = { package = "bellman_ce", git = "https://github.com/adria0/bellman", branch = "test/affinecoords" }
pairing = { package = "pairing_ce", git = "https://github.com/adria0/pairing", branch = "feature/affinecoords" }
base64 = "0.10.1"

[dependencies.ff_ce]
version = "0.7.1"
features = ["derive"]

