[package]
name = "bellwasm"
version = "0.1.0"
authors = ["0Kims"]
edition = "2018"

[profile.release]
# remove debug symbols:
debug = false
# enable link time optimisations:
lto = true
# optimise for size (less aggressive than z):
opt-level = 's'

[lib]
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2.6"
num-bigint = "0.2.2"
rand = "0.4.0"
log = "0.4.6"
byteorder = "1.3.1"
bellman = { package = "bellman_ce", git = "https://github.com/adria0/bellman", branch = "test/affinecoords", default-features = false, features = ["wasm"] }
pairing = { package = "pairing_ce", git = "https://github.com/adria0/pairing", branch = "feature/affinecoords" }
base64 = "0.10.1"
wasm-bindgen = "=0.2.48"

[dependencies.ff_ce]
version = "0.7.1"
features = ["derive"]

